--- a/app/src/main/res/layout/form_feedback_overlay.xml
+++ b/app/src/main/res/layout/form_feedback_overlay.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/feedbackContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -26,7 +27,7 @@
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
                 android:src="@android:drawable/ic_dialog_alert"
-                android:tint="@android:color/white" />
+                app:tint="@android:color/white" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -98,7 +99,7 @@
                 android:layout_gravity="center_vertical"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:src="@android:drawable/ic_menu_close_clear_cancel"
-                android:tint="@android:color/white" />
+                app:tint="@android:color/white" />
 
         </LinearLayout>
 
